--- a/.gitattributes
+++ b/.gitattributes
@@ -5,4 +5,7 @@ lexical-db/lexical.db.xz.sha256 filter= diff= merge= text
 mercurial/* filter=lfs diff=lfs merge=lfs -text
 mercurial/SOURCE filter= diff= merge= text
 mercurial/LICENSE filter= diff= merge= text
+mercurial-macos/**/* filter=lfs diff=lfs merge=lfs -text
+mercurial-macos/SOURCE filter= diff= merge= text
+mercurial-macos/LICENSE filter= diff= merge= text
 * text=auto
